[package]
name = "project_zed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version =  "0.11.0", features = ["jpeg", "png"] }
bevy_rapier3d = { version = "0.22.0", features = ["simd-stable", "debug-render-3d"] }

#[profile.dev.package.rapier3d]
#opt-level = 3

#[profile.release]
#codegen-units = 1
